Update NTV logo to correctly cropped version

--- a/css/styles.css
+++ b/css/styles.css
@@ -364,6 +364,8 @@ p {
 	display: block;
 	width: 40vw;
 	margin: auto;
+	margin-top: 4em;
+	margin-bottom: 4em;
 }
 
 .row.nspiretv .videos {
